@@ -1,0 +1,11 @@
+[A 1]
+foo = low
+
+[A 2]
+foo = boo
+
+[B 1]
+foo = roo
+
+[A 3]
+foo = gnome
