@@ -1,3 +1,7 @@
+* Added regression tests for bug #1720915
+- https://sourceforge.net/tracker/index.php?func=detail&aid=1720915&group_id=6926&atid=106926
+- the bug seems to be fixed in trunk.
+
 Version 2.45:  ( Sat Dec 27 17:21:45 IST 2008 )
 -----------------------------------------------
 
